--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+  max-width: 1440px;
+  font-size: 18px;
+  font-family: "Rubik", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* #map {
+  height: 200px;
+  flex-grow: 1;
+} */
+
+.header-container {
+  background-image: url(images/pattern-bg-desktop.png);
+  background-repeat: no-repeat;
+  height: 35vh;
+}
+
+h1 {
+  color: #fff;
+  margin: 30px;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  padding: 15px;
+  width: 500px;
+  border-radius: 10px 0 0 10px;
+  border: none;
+}
+.search-btn {
+  padding: 15px;
+  width: 50px;
+  border-radius: 0 15px 15px 0;
+  border: none;
+  background-color: hsl(0, 0%, 17%);
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.search-btn:hover {
+  background-color: hsl(0, 0%, 37%);
+}
+
+.main-info-container {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  width: 1000px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.main-info-container div {
+  border-image: linear-gradient(
+      to bottom,
+      transparent,
+      hsl(0, 0%, 60%),
+      transparent
+    )
+    1 100%;
+  border-style: solid;
+  border-width: 1px;
+  padding: 0 20px;
+}
+
+.main-info-container div:first-child {
+  border-left: none;
+}
+.main-info-container div:last-child {
+  border-right: none;
+}
+.main-info-container div p {
+  color: hsl(0, 0%, 59%);
+  text-transform: uppercase;
+  font-size: 14px;
 }
