--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,8 @@ input {
 }
 
 .main-info-container {
-  position: absolute;
+  position: fixed;
+  /* position: absolute; */
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
