--- a/src/index.css
+++ b/src/index.css
@@ -10,18 +10,15 @@ body {
 .header-container {
   background-image: url(images/pattern-bg-desktop.png);
   background-repeat: no-repeat;
-  height: 35vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 280px;
 }
 
 h1 {
   color: #fff;
   margin: 30px;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 input {
@@ -46,9 +43,8 @@ input {
 }
 
 .main-info-container {
-  position: fixed;
-  /* position: absolute; */
-  top: 35%;
+  position: absolute;
+  top: 0;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1000;
@@ -56,8 +52,9 @@ input {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   background-color: #fff;
   border-radius: 10px;
-  padding: 20px;
-  width: 1000px;
+  padding: 15px;
+  width: 800px;
+  max-width: 1000px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
@@ -92,7 +89,7 @@ input {
 .main-info-container div > p:last-child {
   color: hsl(0, 0%, 17%);
   font-weight: 700;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 /* loader */
@@ -102,4 +99,8 @@ input {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.main {
+  position: relative;
 }
