--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   max-width: 1440px;
+  height: 100vh;
   font-size: 18px;
   font-family: "Rubik", sans-serif;
 }
@@ -13,12 +14,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 280px;
+  height: 30vh;
+  padding: 40px;
 }
 
 h1 {
   color: #fff;
-  margin: 30px;
+  /* margin: 30px; */
 }
 
 input {
@@ -102,5 +104,6 @@ input {
 }
 
 .main {
+  height: 70vh;
   position: relative;
 }
